---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type k : int\nput : k, 1\n"
---
"k"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:19..20: cannot use `k` as an expression
| error for src/main.t:19..20: `k` is a reference to a type, not a variable
| note for src/main.t:5..6: `k` declared here
